# lixun

./: .env.example  .gitignore  Dockerfile  README.md  checklist.md  docker-compose.yml  legacy_main.py  main.py  pyproject.toml
devmate/: cli.py  config.py  llm.py  logging_utils.py  observability.py
devmate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
devmate/agent/: core.py  rewrite.py  run_state.py  tools.py
devmate/mcp_client/: client.py
devmate/rag/: ingest.py  retriever.py
docker/: Dockerfile  docker-compose.yml
docs/: internal_fastapi_guidelines.md  internal_guidelines.md  templates.md
mcp_server/: main.py  tools.py
scripts/: check_env.py  ingest_docs.py  run_mcp_server.py  test_mcp_client.py  test_rag.py  test_streamable_http_client.py
src/devmate/: __init__.py  __main__.py  agent.py  config.py  mcp_client.py  mcp_server.py  observability.py  rag.py  scripts.py
